<resources>
    <string name="app_name">SHLibrary</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="scan_text">将条形码放入框内, 即可自动扫描</string>
    <string name="details">图书详情</string>
    <string name="donation">捐书</string>
    <string name="borrowing">借书</string>
    <string name="returnbook">还书</string>
    <string name="introduction">内容简介</string>
    <string name="author_intro">作者介绍</string>
    <string name="catalog">目录</string>
    <string name="buy">购买</string>
    <string name="number">数量：</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="load_more">加载更多</string>
    <string name="loading">加载中...</string>
    <string name="btn_text_retry">重试</string>
    <string name="search_hint">书名、作者</string>
	
	<string-array name="navigation_array">
        <item>首页</item>
        <item>收藏</item>
        <item>书吧</item>
        <item>发现</item>
        <item>搜索</item>
        <item>作者</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <string name="unlogin">未登录</string>
    <string name="log_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="log_out">登出</string>
    <string name="cancel">取消</string>
    <string name="personal">个人中心</string>

    <string name="borrowed_date">借书日期:%1$s</string>
    <string name="sendback_date">应还日期:%1$s</string>
    <string name="book_price">￥：%1$s</string>

    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_user_not_found">Cannot retrieve user data. Check your internet connection</string>
    <string name="title_activity_book_details">BookDetailsActivity</string>

</resources>
