<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_user"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="用户名"
        />
    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="密码"
        />
    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:password="true"
        />

    <Button
        android:id="@+id/button_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:background="@drawable/rect_selector"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:background="@color/primary"
            />

        <Button
            android:id="@+id/button_cancel"
            android:layout_weight="1"
            android:background="@color/grey"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </LinearLayout>



</LinearLayout>