<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.izlei.shlibrary.presentation.view.activity.BookDetailsActivity$PlaceholderFragment">

    <ScrollView
        android:id="@+id/scrollView_book_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView_book"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                     />

                <TextView
                    android:id="@+id/textView_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/imageView_book"
                    android:layout_toEndOf="@+id/imageView_book"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView_title"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@+id/imageView_book"
                    android:text="" />

                <TextView
                    android:id="@+id/textView_publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView_author"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/imageView_book"
                    android:text="" />

                <TextView
                    android:id="@+id/textView_pubdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView_publisher"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/imageView_book"
                    android:text="" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_donation"
                    style="@style/Button_Operator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_pink"
                    android:text="@string/donation" />

                <Button
                    android:id="@+id/button_borrow"
                    style="@style/Button_Operator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_green"
                    android:text="@string/borrowing" />

                <Button
                    android:id="@+id/button_sendBack"
                    style="@style/Button_Operator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_brown"
                    android:text="@string/returnbook" />
            </LinearLayout>

            <include layout="@layout/divider" />

            <FrameLayout
                android:id="@+id/frameLayout_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/summary_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/introduction"
                    android:textColor="@color/green"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:text="" />
            </FrameLayout>

            <include layout="@layout/divider" />

            <FrameLayout
                android:id="@+id/frameLayout_author_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/author_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author_intro"
                    android:textColor="@color/green"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView_author_intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="" />
            </FrameLayout>

            <include layout="@layout/divider" />

            <FrameLayout
                android:id="@+id/frameLayout_catalog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/catalog_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/catalog"
                    android:textColor="@color/green"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView_catalog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:text=""/>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/view_progress"/>
    <include layout="@layout/view_retry"/>

</RelativeLayout>
